--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <form>
             <textarea name="myText" cols="80" rows="10"></textarea>
         </form>
-        <a href="mesage.html"><button onclick="toggle4()" class="btn">SAVE</button></a>
+        <a href="msg.html"><button onclick="toggle4()" class="btn">SAVE</button></a>
     </div>
     <script>
         confirm('DO U WANT TO ACCESS THIS SITE?');
